Add invoice builder tool and update navigation

--- a/bitcoin-storage.html
+++ b/bitcoin-storage.html
@@ -137,8 +137,10 @@
         <nav class="nav">
             <div class="nav-container">
                 <div class="nav-brand">
-                    <img src="images/plub tools image.jpeg" alt="Plebtools" class="nav-logo">
-                    <h1 class="logo">Plebtools</h1>
+                    <a href="home" style="display: flex; align-items: center; gap: 1rem; text-decoration: none; color: inherit;">
+                        <img src="images/plub tools image.jpeg" alt="Plebtools" class="nav-logo">
+                        <h1 class="logo">Plebtools</h1>
+                    </a>
                 </div>
                 <div class="nav-links">
                     <div class="dropdown" id="toolsDropdown">
@@ -153,6 +155,7 @@
                             <a href="financial-planner">📋 Financial Planner</a>
                             <a href="bitcoin-security">🛡️ Bitcoin Security</a>
                             <a href="bitcoin-storage">🏛️ Bitcoin Storage</a>
+                            <a href="invoice-builder">🧾 Invoice Builder</a>
                             <a href="pleb-release">📰 Pleb Release</a>
                         </div>
                     </div>
@@ -284,7 +287,7 @@
                                     class="affiliate-link">Buy a BitAxe</a>
                             </div>
                             <div class="affiliate-item">
-                                <h4>1:1 Coaching</h4><a href="https://www.differentmedia.ca/bitcoin1-1" target="_blank"
+                                <h4>1:1 Coaching</h4><a href="https://pathtobitcoin.xyz" target="_blank"
                                     class="affiliate-link">Bitcoin 1:1</a>
                             </div>
                             <div class="affiliate-item">
