--- a/home.html
+++ b/home.html
@@ -664,6 +664,7 @@
               <a href="bitcoin-security">🛡️ Bitcoin Security</a>
               <a href="bitcoin-storage">🏛️ Bitcoin Storage</a>
               <a href="pleb-release">📰 Pleb Release</a>
+              <a href="invoice-builder">🧾 Invoice Builder</a>
             </div>
           </div>
           <a href="account" class="account-link">👤 Account</a>
@@ -681,6 +682,10 @@
           Professional Bitcoin treasury and portfolio tracking tools for individuals and organizations. 
           Track your Bitcoin purchases, monitor portfolio performance, and make data-driven decisions.
         </p>
+        <div class="hero-buttons">
+          <a href="invoice-builder" class="hero-btn primary">Create an Invoice</a>
+          <a href="#features" class="hero-btn">Explore All Tools</a>
+        </div>
       </div>
     </section>
 
@@ -715,6 +720,16 @@
             adjustments, premium income, and visualize your options strategy results.
           </p>
           <a href="coveredcall-tracker" class="feature-btn">View Covered Call Tracker</a>
+        </div>
+
+        <div class="feature-card">
+          <span class="feature-icon">🧾</span>
+          <h3 class="feature-title">Invoice Builder</h3>
+          <p class="feature-description">
+            Generate polished invoices with customizable line items, logo uploads, tax handling, and PDF export.
+            Save reusable templates directly in your browser for fast repeat billing.
+          </p>
+          <a href="invoice-builder" class="feature-btn">Build Invoices</a>
         </div>
 
         <div class="feature-card">
@@ -831,7 +846,7 @@
             </div>
             <div class="affiliate-item">
               <h4>1:1 Coaching</h4>
-              <a href="https://www.differentmedia.ca/bitcoin1-1" target="_blank" class="affiliate-link">Bitcoin 1:1</a>
+              <a href="https://pathtobitcoin.xyz" target="_blank" class="affiliate-link">Bitcoin 1:1</a>
             </div>
             <div class="affiliate-item">
               <h4>Where to learn</h4>
