--- a/account.html
+++ b/account.html
@@ -140,8 +140,10 @@
     <nav>
       <div class="nav-container">
         <div class="logo-container">
-          <img src="images/plub tools image.jpeg" alt="Plebtools" class="nav-logo">
-          <h1 class="logo">Plebtools</h1>
+          <a href="home" style="display: flex; align-items: center; gap: 1rem; text-decoration: none; color: inherit;">
+            <img src="images/plub tools image.jpeg" alt="Plebtools" class="nav-logo">
+            <h1 class="logo">Plebtools</h1>
+          </a>
         </div>
         <div class="nav-links">
           <div class="dropdown" id="toolsDropdown">
@@ -156,6 +158,7 @@
               <a href="financial-planner">📋 Financial Planner</a>
               <a href="bitcoin-security">🛡️ Bitcoin Security</a>
               <a href="bitcoin-storage">🏛️ Bitcoin Storage</a>
+              <a href="invoice-builder">🧾 Invoice Builder</a>
               <a href="pleb-release">📰 Pleb Release</a>
             </div>
           </div>
@@ -229,7 +232,7 @@
             </div>
             <div class="affiliate-item">
               <h4>1:1 Coaching</h4>
-              <a href="https://www.differentmedia.ca/bitcoin1-1" target="_blank" class="affiliate-link">Bitcoin 1:1</a>
+              <a href="https://pathtobitcoin.xyz" target="_blank" class="affiliate-link">Bitcoin 1:1</a>
             </div>
             <div class="affiliate-item">
               <h4>Where to learn</h4>
