--- a/financial-planner.html
+++ b/financial-planner.html
@@ -119,23 +119,27 @@
     .planner-header {
       text-align: center;
       margin-bottom: 3rem;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
       color: white;
       padding: 3rem 2rem;
-      border-radius: 15px;
-      box-shadow: 0 10px 30px rgba(102, 126, 234, 0.3);
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+      border: 1px solid #333;
       position: relative;
     }
 
     .planner-header h1 {
-      font-size: 2.5rem;
+      font-size: 3rem;
       margin-bottom: 1rem;
-      color: white;
+      background: -webkit-linear-gradient(45deg, #f59e0b, #fbbf24, #fde68a);
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+      -webkit-background-clip: text;
     }
 
     .planner-header p {
-      font-size: 1.1rem;
-      opacity: 0.9;
+      font-size: 1.2rem;
+      color: #ccc;
       margin-bottom: 0;
     }
 
@@ -453,9 +457,39 @@
       }
     }
 
+    /* Keep logo purple */
+    .logo {
+      color: #667eea !important;
+    }
+
+    #toolsBtn {
+      color: white !important;
+    }
+
     /* Dark theme support */
     .dark-theme .planner-container {
       background: #2d2d2d;
+    }
+
+    .dark-theme .planner-header {
+      background: linear-gradient(135deg, #2d2d2d 0%, #1a1a1a 100%);
+    }
+
+    /* Open Source section text colors */
+    .planner-section h3 {
+      color: #000;
+    }
+
+    .planner-section p {
+      color: #000;
+    }
+
+    .dark-theme .planner-section h3 {
+      color: #fff !important;
+    }
+
+    .dark-theme .planner-section p {
+      color: #fff !important;
     }
 
     .dark-theme .planner-section,
@@ -588,7 +622,7 @@
 
     .affiliate-link {
       display: inline-block;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #f59e0b 0%, #fbbf24 100%);
       color: white;
       text-decoration: none;
       padding: 0.5rem 1rem;
@@ -597,12 +631,12 @@
       font-weight: bold;
       margin-bottom: 0.5rem;
       transition: all 0.3s ease;
-      box-shadow: 0 2px 8px rgba(102, 126, 234, 0.3);
+      box-shadow: 0 2px 8px rgba(245, 158, 11, 0.3);
     }
 
     .affiliate-link:hover {
       transform: translateY(-2px);
-      box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
+      box-shadow: 0 4px 15px rgba(245, 158, 11, 0.4);
       color: white;
       text-decoration: none;
     }
@@ -651,8 +685,10 @@
     <nav>
       <div class="nav-container">
         <div class="logo-container">
-          <img src="images/plub tools image.jpeg" alt="Plebtools" class="nav-logo">
-          <h1 class="logo">Plebtools</h1>
+          <a href="home" style="display: flex; align-items: center; gap: 1rem; text-decoration: none; color: inherit;">
+            <img src="images/plub tools image.jpeg" alt="Plebtools" class="nav-logo">
+            <h1 class="logo">Plebtools</h1>
+          </a>
         </div>
         <div class="nav-links">
           <div class="dropdown" id="toolsDropdown">
@@ -667,6 +703,7 @@
               <a href="financial-planner">📋 Financial Planner</a>
               <a href="bitcoin-security">🛡️ Bitcoin Security</a>
               <a href="bitcoin-storage">🏛️ Bitcoin Storage</a>
+              <a href="invoice-builder">🧾 Invoice Builder</a>
               <a href="pleb-release">📰 Pleb Release</a>
             </div>
           </div>
@@ -814,7 +851,7 @@
               </div>
               <div class="affiliate-item">
                 <h4>1:1 Coaching</h4>
-                <a href="https://www.differentmedia.ca/bitcoin1-1" target="_blank" class="affiliate-link">Bitcoin 1:1</a>
+                <a href="https://pathtobitcoin.xyz" target="_blank" class="affiliate-link">Bitcoin 1:1</a>
               </div>
               <div class="affiliate-item">
                 <h4>Where to learn</h4>
